--- a/web-tsu3/index-1.html
+++ b/web-tsu3/index-1.html
@@ -293,67 +293,72 @@
 									<a href="">
 										<img src="./images/person-1.png" alt="">
 										<div class="in">
-											<h3>陈 晓</h3>
+											<h3>陈  晓</h3>
 											<p>清华大学经济管理学院会计系教授</p>
-											<p>中国税务学会理事</p>
-											<p>中国会计学会理事</p>
-											<p>美国杜兰大学博士</p>
-											<p>美国杜兰大学博士</p>
+											<p>清华大学经济管理学院会计系教授</p>
+											<p>清华大学全球私募股权研究院</p>
+											<p>常务副院长</p>
+											<p>清华大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/person-1.png" alt="">
+										<img src="./images/person-2.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>肖  星</h3>
+											<p>清华大学经济管理学院会计系教授</p>
+											<p>清华大学经济管理学院会计系主任</p>
+											<p>清华大学全球私募股权研究院</p>
+											<p>常务副院长</p>
+											<p>清华大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/person-1.png" alt="">
+										<img src="./images/person-3.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>杨之曙</h3>
+											<p>清华大学经济管理学院金融系教授</p>
+											<p>教育部“长江学者”特聘教授</p>
+											<p>清华大学经济管理学院金融系主任</p>
+											<p>中国证监会第十七届发审委</p>
+											<p>兼职委员</p>
+											<p>清华大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/person-1.png" alt="">
+										<img src="./images/person-4.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>宁向东</h3>
+											<p>清华大学经济管理学院</p>
+											<p>创新创业与战略系教授</p>
+											<p>清华大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/person-1.png" alt="">
+										<img src="./images/person-5.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>于增彪</h3>
+											<p>清华大学经济管理学院会计系教授</p>
+											<p>美国管理会计师协会学术会员</p>
+											<p>厦门大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/person-1.png" alt="">
+										<img src="./images/person-6.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>谢德仁</h3>
+											<p>清华大学经济管理学院会计系教授</p>
+											<p>中国证监会第十七届发审委兼职委员</p>
+											<p>厦门大学博士</p>
 										</div>
 									</a>
 								</li>
@@ -364,45 +369,67 @@
 								<ul>
 									<li>
 										<a href="">
-											<img src="./images/person-1.png" alt="">
+											<img src="./images/person-7.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>李  丹</h3>
+												<p>清华大学经济管理学院会计系副教授</p>
+												<p>清华大学经济管理学院</p>
+												<p>公司治理研究中心主任</p>
+												<p>美国佐治亚理工学院博士</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
-											<img src="./images/person-1.png" alt="">
+											<img src="./images/person-8.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>CHENG Qiang</h3>
+												<p>新加坡管理大学李光前会计学</p>
+												<p>讲席教授</p>
+												<p>清华大学经济管理学院杰出访问教授</p>
+												<p>新加坡管理大学会计学院院长</p>
+												<p>美国威斯康星大学博士</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
-											<img src="./images/person-1.png" alt="">
+											<img src="./images/person-9.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>ZHANG Liandong</h3>
+												<p>新加坡管理大学会计学教授</p>
+												<p>新加坡管理大学会计学院副院长</p>
+												<p>新加坡南洋理工大学博士</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
-											<img src="./images/person-1.png" alt="">
+											<img src="./images/person-10.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>CHEN Xia</h3>
+												<p>新加坡管理大学会计学教授</p>
+												<p>美国芝加哥大学博士</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<img src="./images/person-11.png" alt="">
+											<div class="in">
+												<h3>YUE Heng</h3>
+												<p>新加坡管理大学会计学副教授</p>
+												<p>美国杜兰大学博士</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<img src="./images/person-12.png" alt="">
+											<div class="in">
+												<h3>WANG Jiwei</h3>
+												<p>新加坡管理大学会计学副教授</p>
+												<p>香港科技大学博士</p>
 											</div>
 										</a>
 									</li>
@@ -435,45 +462,45 @@
 								<li>
 									<a href="">
 										<div class="in">
-											<h3>聂庆平</h3>
-											<p>中国证券金融股份有限公司</p>
-											<p>董事长</p>
+											<h3>贾文勤</h3>
+											<p>证监会</p>
+											<p>首席会计师</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
 										<div class="in">
-											<h3>聂庆平</h3>
-											<p>中国证券金融股份有限公司</p>
-											<p>董事长</p>
+											<h3>王洪军</h3>
+											<p>首钢集团</p>
+											<p>总会计师</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
 										<div class="in">
-											<h3>聂庆平</h3>
-											<p>中国证券金融股份有限公司</p>
-											<p>董事长</p>
+											<h3>赵宇龙</h3>
+											<p>银保监会</p>
+											<p>财务会计部（偿付能力监管部）主任</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
 										<div class="in">
-											<h3>聂庆平</h3>
-											<p>中国证券金融股份有限公司</p>
-											<p>董事长</p>
+											<h3>蔡  磊</h3>
+											<p>京东集团</p>
+											<p>副总裁</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
 										<div class="in">
-											<h3>聂庆平</h3>
-											<p>中国证券金融股份有限公司</p>
-											<p>董事长</p>
+											<h3>王子龙</h3>
+											<p>中金公司</p>
+											<p>并购业务全球负责人</p>
 										</div>
 									</a>
 								</li>
@@ -485,8 +512,68 @@
 									<li>
 										<a href="">
 											<div class="in">
-												<h3>聂庆平</h3>
-												<p>中国证券金融股份有限公司</p>
+												<h3>杨  芳</h3>
+												<p>新希望集团有限公司</p>
+												<p>董首席财务官事长</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>章  虹</h3>
+												<p>壳牌</p>
+												<p>中国区财务总监</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>吕连浮</h3>
+												<p>国新集团</p>
+												<p>财务公司总经理</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>蔡晓卫</h3>
+												<p>启迪控股</p>
+												<p>常务副总裁、集团财务总负责人</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>曾长虹</h3>
+												<p>中国证监会</p>
+												<p>发行部副主任</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>程  伟</h3>
+												<p>中海油国际融资租赁公司</p>
+												<p>总裁助理</p>
+											</div>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide">
+								<ul>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>崔云江</h3>
+												<p>兵器装备集团财务有限责任公司</p>
 												<p>董事长</p>
 											</div>
 										</a>
@@ -494,27 +581,60 @@
 									<li>
 										<a href="">
 											<div class="in">
-												<h3>聂庆平</h3>
-												<p>中国证券金融股份有限公司</p>
-												<p>董事长</p>
+												<h3>巩月琼</h3>
+												<p>北汽福田</p>
+												<p>总经理</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
 											<div class="in">
-												<h3>聂庆平</h3>
-												<p>中国证券金融股份有限公司</p>
-												<p>董事长</p>
+												<h3>江  东</h3>
+												<p>中国银行</p>
+												<p>会计信息部副总经理</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
 											<div class="in">
-												<h3>聂庆平</h3>
-												<p>中国证券金融股份有限公司</p>
-												<p>董事长</p>
+												<h3>李东平</h3>
+												<p>中国证监会、中证金融研究院</p>
+												<p>监管部副处长、副院长</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>马  源</h3>
+												<p>高瓴资本</p>
+												<p>首席财务官</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>王  军</h3>
+												<p>中国铝业</p>
+												<p>财务总监、董秘</p>
+											</div>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="swiper-slide">
+								<ul>
+									<li>
+										<a href="">
+											<div class="in">
+												<h3>赵宏强</h3>
+												<p>百融云创</p>
+												<p>董事、首席财务官</p>
 											</div>
 										</a>
 									</li>
