--- a/web-tsu3/index-2.html
+++ b/web-tsu3/index-2.html
@@ -229,67 +229,77 @@
 									<a href="">
 										<img src="./images/2-person-1.png" alt="">
 										<div class="in">
-											<h3>陈 晓</h3>
+											<h3>肖  星</h3>
 											<p>清华大学经济管理学院会计系教授</p>
-											<p>中国税务学会理事</p>
-											<p>中国会计学会理事</p>
-											<p>美国杜兰大学博士</p>
-											<p>美国杜兰大学博士</p>
+											<p>清华大学经济管理学院会计系主任</p>
+											<p>清华大学全球私募股权研究院</p>
+											<p>常务副院长</p>
+											<p>清华大学博士</p>
+										</div>
+										
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<img src="./images/2-person-2.png" alt="">
+										<div class="in">
+											<h3>徐  心</h3>
+											<p>清华大学经济管理学院</p>
+											<p>管理科学与工程系教授</p>
+											<p>清华大学经济管理学院副院长</p>
+											<p>美国加州大学欧文分校博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/2-person-1.png" alt="">
+										<img src="./images/2-person-3.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>杨百寅</h3>
+											<p>清华大学经济管理学院</p>
+											<p>领导力与组织管理系教授</p>
+											<p>伟创力讲席教授</p>
+											<p>清华大学经济管理学院</p>
+											<p>领导力与组织管理系主任</p>
+											<p>美国佐治亚大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/2-person-1.png" alt="">
+										<img src="./images/2-person-4.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>杨之曙</h3>
+											<p>清华大学经济管理学院金融系教授</p>
+											<p>教育部“长江学者”特聘教授</p>
+											<p>清华大学经济管理学院金融系主任</p>
+											<p>中国证监会第十七届发审委</p>
+											<p>兼职委员</p>
+											<p>清华大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/2-person-1.png" alt="">
+										<img src="./images/2-person-5.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>于增彪</h3>
+											<p>清华大学经济管理学院会计系教授</p>
+											<p>美国管理会计师协会学术会员</p>
+											<p>厦门大学博士</p>
 										</div>
 									</a>
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/2-person-1.png" alt="">
+										<img src="./images/2-person-6.png" alt="">
 										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
-										</div>
-									</a>
-								</li>
-								<li>
-									<a href="">
-										<img src="./images/2-person-1.png" alt="">
-										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
+											<h3>张为国</h3>
+											<p>清华大学经济管理学院</p>
+											<p>管理实践访问教授</p>
+											<p>资本市场学院特聘专家</p>
+											<p>中国证监会前首席会计师</p>
+											<p>上海财经大学博士</p>
 										</div>
 									</a>
 								</li>
@@ -300,40 +310,69 @@
 								<ul>
 									<li>
 										<a href="">
-											<img src="./images/2-person-1.png" alt="">
+											<img src="./images/2-person-7.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>陈  晓</h3>
+												<p>清华大学经济管理学院会计系教授</p>
+												<p>清华大学经济管理学院会计系教授</p>
+												<p>清华大学全球私募股权研究院</p>
+												<p>常务副院长</p>
+												<p>清华大学博士</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
-											<img src="./images/2-person-1.png" alt="">
+											<img src="./images/2-person-8.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>陈煜波</h3>
+												<p>清华大学经济管理学院</p>
+												<p>市场营销系教授</p>
+												<p>清华大学经济管理学院</p>
+												<p>党委书记兼副院长</p>
+												<p>美国佛罗里达大学博士</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
-											<img src="./images/2-person-1.png" alt="">
+											<img src="./images/2-person-9.png" alt="">
 											<div class="in">
-												<h3>白重恩</h3>
-												<p>弗里曼讲席教授</p>
-												<p>经济系 教授</p>
-												<p>清华大学经济管理学院 院长</p>
+												<h3>何  平</h3>
+												<p>清华大学经济管理学院</p>
+												<p>金融系教授</p>
+												<p>清华大学经济管理学院</p>
+												<p>中国金融研究中心主任</p>
+												<p>美国宾夕法尼亚大学博士</p>
 											</div>
 										</a>
 									</li>
 									<li>
 										<a href="">
-											<img src="./images/2-person-1.png" alt="">
+											<img src="./images/2-person-10.png" alt="">
+											<div class="in">
+												<h3>金占明</h3>
+												<p>清华大学经济管理学院</p>
+												<p>创新创业与战略系教授</p>
+												<p>中国矿业大学博士</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<img src="./images/2-person-11.png" alt="">
+											<div class="in">
+												<h3>彭凯平</h3>
+												<p>清华大学社会科学学院心理学系教授</p>
+												<p>清华大学社会科学学院院长</p>
+												<p>清华大学社会科学学院心理学系主任</p>
+												<p>美国密歇根大学博士</p>
+											</div>
+										</a>
+									</li>
+									<li>
+										<a href="">
+											<img src="./images/2-person-12.png" alt="">
 											<div class="in">
 												<h3>白重恩</h3>
 												<p>弗里曼讲席教授</p>
